--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn Elm</title>
-    <script src="out/main.js"></script>
+    <script src="main.js"></script>
+    <style>
+        .finished {
+            text-decoration: line-through;
+        }
+
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
