--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,14 @@
 </head>
 
 <body>
-    <script>var app = Elm.Main.init();</script>
+    <script>
+        var storedState = localStorage.getItem("elm-todo");
+        var startingState = storedState ? JSON.parse(storedState) : null;
+        var app = Elm.Main.init({ flags: startingState });
+        app.ports.setStorage.subscribe(function (state) {
+            localStorage.setItem("elm-todo", JSON.stringify(state));
+        });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
