--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
     <title>Learn Elm</title>
-    <link href="https://bootswatch.com/5/united/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <script src="main.js"></script>
+    <script type="module" src="../src/js/index.js"></script>
 </head>
 
 <body>
-    <script>
-        var storedState = localStorage.getItem("elm-todo");
-        var startingState = storedState ? JSON.parse(storedState) : null;
-        var app = Elm.Main.init({ flags: startingState });
-        app.ports.setStorage.subscribe(function (state) {
-            localStorage.setItem("elm-todo", JSON.stringify(state));
-        });
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
