--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="manifest" href="./site.webmanifest">
     <title>Learn Elm</title>
-    <script type="module" src="../src/js/index.js"></script>
+    <script type="module" src="../src/js/app.js"></script>
 </head>
 
 <body>
