--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <div id="app"></div>
 </body>
 
 </html>
